--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@rainbow-me/rainbowkit": "^1.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "encoding": "^0.1.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "lokijs": "^1.5.12",
     "next": "13.4.2",
     "openai": "^3.2.1",
+    "pino-pretty": "^10.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "wagmi": "^1.0.2"
   }
 }
