--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@nomicfoundation/hardhat-verify": "^1.0.0",
     "@rainbow-me/rainbowkit": "^1.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.1.3",
@@ -18,6 +19,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "encoding": "^0.1.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
@@ -28,6 +30,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "snarkyjs": "^0.10.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "wagmi": "^1.0.2"
