--- a/on-chain-corgi/package.json
+++ b/on-chain-corgi/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hardhat-project",
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
     "dotenv": "^16.0.3"
   }
